FIX collapse btn style and sidebar

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -17,12 +17,12 @@
 
 ::-webkit-scrollbar-track {
   background: transparent;
-  border-radius: 2px;
+  border-radius: 0;
 }
 
 ::-webkit-scrollbar-thumb {
   background: transparent;
-  border-radius: 2px;
+  border-radius: 0;
 
   &:hover {
     background: $primary-text-color;
