--- a/src/assets/scss/sidebar.scss
+++ b/src/assets/scss/sidebar.scss
@@ -40,7 +40,7 @@
     }
 
     input {
-      width: calc(100% - 52px);
+      width: calc(100% - 26px);
       height: 22px;
       border-color: #efefef;
 
